<resources>
    <string name="app_name" translatable="false">My Application For Android Academy</string>
    <string name="hello">Hello World!</string>
    <string name="hello_land_world" translatable="false">Hello Land World</string>
    <string name="this_is_second_activity">This is second activity</string>
    <string name="back">Back</string>
    <string name="some_id">13+</string>
    <string name="name">Avengers:\nEnd Game</string>
    <string name="film_genre">Action, Adventure, Fantasy</string>
    <string name="text_view">TextView</string>
    <string name="reviews">Reviews</string>
    <string name="value_reviews">125</string>
    <string name="storyline">Storyline</string>
    <string name="story_content">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="cast">cast</string>
    <string name="name_actor_4">Robert \nDowney Jr.</string>
    <string name="name_actor_2">Chris \nEvans</string>
    <string name="name_actor_3">Mark \nRuffalo</string>
    <string name="hello_world">Hello world</string>
    <string name="movies_list">Movies list</string>
    <string name="_13">13+</string>
    <string name="avengers_end_game">Avengers: End Game</string>
    <string name="action_adventure_drama">Action, Adventure, Drama</string>
    <string name="value_min">137</string>
    <string name="min">Min</string>
    <string name="name_actor_1">name_actor_1</string>
</resources>