<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true">
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="12dp" />
    
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintGuide_end="12dp" />
    
    <ImageView
        android:id="@+id/poster"
        android:layout_width="166dp"
        android:layout_height="246dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:background="@drawable/avengers_draw"
        app:layout_constraintStart_toStartOf="@id/mask"
        app:layout_constraintTop_toTopOf="@id/mask" />
    
    <ImageView
        android:id="@+id/mask"
        android:layout_width="170dp"
        android:layout_height="296dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/mask_for_movies_list"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="parent" />
    
    <ImageView
        android:id="@+id/rectangle"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rectangle"
        app:layout_constraintStart_toStartOf="@id/mask"
        app:layout_constraintTop_toTopOf="@id/mask" />
    
    <TextView
        android:id="@+id/text_recommend_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/_13"
        android:textAppearance="@style/Plus_13"
        app:layout_constraintStart_toStartOf="@id/rectangle"
        app:layout_constraintTop_toTopOf="@id/rectangle" />
    
    <ImageView
        android:id="@+id/favorite"
        android:layout_width="24dp"
        android:layout_height="18dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="6dp"
        android:background="@drawable/like"
        app:layout_constraintEnd_toEndOf="@id/mask"
        app:layout_constraintTop_toTopOf="@id/mask" />
    
    <TextView
        android:id="@+id/text_film_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="214dp"
        android:text="@string/action_adventure_drama"
        android:textAppearance="@style/TextTag"
        app:layout_constraintStart_toStartOf="@id/poster"
        app:layout_constraintTop_toTopOf="@id/mask" />
    
    <RatingBar
        android:id="@+id/ratingBar"
        style="@style/Rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="4dp"
        android:numStars="5"
        android:rating="3.5"
        android:stepSize="0.5"
        app:layout_constraintStart_toStartOf="@id/poster"
        app:layout_constraintTop_toBottomOf="@id/text_film_genre" />
    
    <TextView
        android:id="@+id/value_reviews"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/value_reviews"
        android:textAppearance="@style/ValueReviews"
        app:layout_constraintBottom_toBottomOf="@id/ratingBar"
        app:layout_constraintStart_toEndOf="@id/ratingBar"
        app:layout_constraintTop_toTopOf="@id/ratingBar" />
    
    <TextView
        android:id="@+id/text_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/reviews"
        android:textAppearance="@style/ValueReviews"
        app:layout_constraintStart_toEndOf="@+id/value_reviews"
        app:layout_constraintTop_toTopOf="@+id/value_reviews" />
    
    <TextView
        android:id="@+id/title_movie"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:text="@string/avengers_end_game"
        android:textAppearance="@style/NameForMoveList"
        app:layout_constraintStart_toStartOf="@id/poster"
        app:layout_constraintTop_toBottomOf="@id/text_film_genre" />
    
    <TextView
        android:id="@+id/time_play_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:text="@string/value_min"
        android:textAppearance="@style/Min"
        app:layout_constraintStart_toStartOf="@id/poster"
        app:layout_constraintTop_toBottomOf="@id/text_film_genre" />
    
    <TextView
        android:id="@+id/text_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/min"
        android:textAppearance="@style/Min"
        app:layout_constraintStart_toEndOf="@id/time_play_min"
        app:layout_constraintTop_toTopOf="@id/time_play_min" />


</androidx.constraintlayout.widget.ConstraintLayout>