<?xml version="1.0" encoding="utf-8"?>
<android.widget.ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_start"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="16dp" />
        
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline_end"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_end="16dp" />
        
        <ImageView
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />
        
        <ImageView
            android:id="@+id/mask"
            android:layout_width="0dp"
            android:layout_height="298dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/orig"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/bg" />
        
        <ImageView
            android:id="@+id/path"
            android:layout_width="6dp"
            android:layout_height="0dp"
            android:layout_marginTop="59dp"
            android:background="@drawable/path"
            app:layout_constraintBottom_toBottomOf="@id/back"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/bg" />
        
        <TextView
            android:id="@+id/back"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/back"
            android:textAppearance="@style/Back"
            app:layout_constraintStart_toEndOf="@id/path"
            app:layout_constraintTop_toTopOf="@id/path" />
        
        <TextView
            android:id="@+id/some"
            android:layout_width="24dp"
            android:layout_height="16dp"
            android:layout_marginTop="226dp"
            android:text="@string/some_id"
            android:textAppearance="@style/SomeId"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/bg" />
        
        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="254dp"
            android:text="@string/name"
            android:textAppearance="@style/Name"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toTopOf="@id/bg" />
        
        <TextView
            android:id="@+id/tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/text_teg"
            android:textAppearance="@style/Tag"
            app:layout_constraintEnd_toEndOf="@+id/guideline_end"
            app:layout_constraintStart_toStartOf="@+id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/name" />
        
        <RatingBar
            android:id="@+id/ratingBar"
            style="@style/Widget.AppCompat.RatingBar.Small"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:rating="3.5"
            android:stepSize="0.5"
            app:layout_constraintBottom_toBottomOf="@id/value_reviews"
            app:layout_constraintStart_toStartOf="@id/guideline_start" />
        
        <TextView
            android:id="@+id/value_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/value_reviews"
            android:textAppearance="@style/Reviews"
            app:layout_constraintStart_toEndOf="@+id/ratingBar"
            app:layout_constraintTop_toBottomOf="@+id/tag" />
        
        <TextView
            android:id="@+id/text_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/reviews"
            android:textAppearance="@style/Reviews"
            app:layout_constraintStart_toEndOf="@+id/value_reviews"
            app:layout_constraintTop_toBottomOf="@+id/tag" />
        
        <TextView
            android:id="@+id/storyline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/storyline"
            android:textAppearance="@style/Reviews"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/value_reviews" />
        
        <TextView
            android:id="@+id/story_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/story_content"
            android:textAppearance="@style/StoryContent"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/storyline" />
        
        <TextView
            android:id="@+id/cast"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/cast"
            android:textAppearance="@style/Reviews"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@id/story_content" />
        
        <ImageView
            android:id="@+id/image_actor_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:background="@drawable/robert"
            app:layout_constraintEnd_toStartOf="@+id/image_actor_2"
            app:layout_constraintStart_toStartOf="@id/guideline_start"
            app:layout_constraintTop_toBottomOf="@+id/cast" />
        
        <ImageView
            android:id="@+id/image_actor_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/chris"
            app:layout_constraintEnd_toStartOf="@+id/image_actor_3"
            app:layout_constraintStart_toEndOf="@id/image_actor_1"
            app:layout_constraintTop_toTopOf="@+id/image_actor_1" />
        
        <ImageView
            android:id="@+id/image_actor_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/mark"
            app:layout_constraintEnd_toStartOf="@+id/image_actor_4"
            app:layout_constraintStart_toEndOf="@id/image_actor_2"
            app:layout_constraintTop_toTopOf="@+id/image_actor_1" />
        
        <ImageView
            android:id="@+id/image_actor_4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/chris_hemsworth"
            app:layout_constraintEnd_toEndOf="@id/guideline_end"
            app:layout_constraintStart_toEndOf="@id/image_actor_3"
            app:layout_constraintTop_toTopOf="@+id/image_actor_1" />
        
        <TextView
            android:id="@+id/name_actor_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:text="@string/name_actor_4"
            android:textAppearance="@style/TextCast"
            app:layout_constraintEnd_toEndOf="@id/image_actor_1"
            app:layout_constraintStart_toStartOf="@id/image_actor_1"
            app:layout_constraintTop_toBottomOf="@id/image_actor_1" />
        
        <TextView
            android:id="@+id/name_actor_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_actor_2"
            android:textAppearance="@style/TextCast"
            app:layout_constraintEnd_toEndOf="@id/image_actor_2"
            app:layout_constraintStart_toStartOf="@id/image_actor_2"
            app:layout_constraintTop_toTopOf="@id/name_actor_1" />
        
        <TextView
            android:id="@+id/name_actor_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_actor_3"
            android:textAppearance="@style/TextCast"
            app:layout_constraintEnd_toEndOf="@id/image_actor_3"
            app:layout_constraintStart_toStartOf="@id/image_actor_3"
            app:layout_constraintTop_toTopOf="@id/name_actor_1" />
        
        <TextView
            android:id="@+id/name_actor_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/name_actor_4"
            android:textAppearance="@style/TextCast"
            app:layout_constraintEnd_toEndOf="@id/image_actor_4"
            app:layout_constraintStart_toStartOf="@id/image_actor_4"
            app:layout_constraintTop_toTopOf="@id/name_actor_1" />
        
    </androidx.constraintlayout.widget.ConstraintLayout>
</android.widget.ScrollView>